Fix spacing issues in Lightning Demos section in postup.html to enhance responsiveness

--- a/src/scss/postup/_airbnb-strengths.scss
+++ b/src/scss/postup/_airbnb-strengths.scss
@@ -1,3 +1,7 @@
+.airbnb-strengths_headline {
+	margin-bottom: 0.5rem;
+}
+
 .airbnb-strengths-container {
 	display: flex;
 	flex-direction: row;
@@ -57,6 +61,11 @@
 }
 
 @include breakpoint(med) {
+	.airbnb-strengths_headline {
+		margin-bottom: 1.5rem;
+		margin-top: 2.5rem;
+	}
+
 	.airbnb-strengths-container {
 		align-items: center;
 		width: fit-content;
@@ -85,7 +94,7 @@
 			height: 1.25rem;
 		}
 
-		div > p {
+		div>p {
 			font-size: 1.125rem;
 		}
 	}
